[package]
name = "instant-netboot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-std = "1.13.0"
async-tftp = "0.3.6"
async-trait = "0.1.83"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

boot-loader-entries = { path = "../boot-loader-entries", version = "0.1.0", features = ["serde"] }
regex = "1.11.1"
thiserror = "2.0.4"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
